--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,9 @@ body {
                     passionate in <span class="text"></span></h4>
                 
                 
-
+ <div class="about-img">
+                    <img src="https://i.ibb.co/yhg4LsK/IMG-1029.jpg" class="abt-res">
+                </div>
                 <div class="home-sci">
                     <a href="https://www.linkedin.com/in/samartha-gs-6645322a4"style="--i:7" target="_blank"><i class='bx bxl-linkedin'></i></a>
                     <a href="mailto:roopasubramanya1234@gmail.com"style="--i:8" target="_blank"><i class='bx bxl-gmail' ></i></a>
