--- a/index.html
+++ b/index.html
@@ -1304,6 +1304,9 @@ body {
                     passionate in <span class="text"></span></h4>
                 
                 
+<div class="img">
+                     <img src="https://i.ibb.co/L5qx5rT/In-Shot-20240112-175940987.png" class="responsive">
+                </div>
 
  
                 <div class="home-sci">
