--- a/index.html
+++ b/index.html
@@ -1517,6 +1517,15 @@ I have selected to national level science exhibition.
         </script>
     
         <script src="./files/script.js"></script>
+                        <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(function(OneSignal) {
+    OneSignal.init({
+      appId: "830b6a80-ecc7-434a-bccd-6dae0f81edc2",
+    });
+  });
+</script>
     </body>
     </html>
 
