--- a/index.html
+++ b/index.html
@@ -1514,18 +1514,20 @@ I have selected to national level science exhibition.
                     toTop.classList.remove("active");
                 }
             });
-        </script>
-    
-        <script src="./files/script.js"></script>
-                        <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+            <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
     OneSignal.init({
-      appId: "830b6a80-ecc7-434a-bccd-6dae0f81edc2",
+      appId: "64305d51-7f3f-4555-82cd-392e16be5835",
+      safari_web_id: "web.onesignal.auto.597eddd1-7088-4460-8312-f4c61675b8f7",
+      notifyButton: {
+        enable: true,
+      },
     });
   });
 </script>
+
     </body>
     </html>
 
