--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
         
-    </head>
+<script src="https://cdn.gravitec.net/storage/89d3d73578f93f8df45f2395d6d91418/client.js" async></script> 
+   </head>
     <body>
         <style>
             
