--- a/index.html
+++ b/index.html
@@ -1516,19 +1516,10 @@ I have selected to national level science exhibition.
                 }
             });
             </script>
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-<script>
-  window.OneSignalDeferred = window.OneSignalDeferred || [];
-  OneSignalDeferred.push(function(OneSignal) {
-    OneSignal.init({
-      appId: "64305d51-7f3f-4555-82cd-392e16be5835",
-      safari_web_id: "web.onesignal.auto.597eddd1-7088-4460-8312-f4c61675b8f7",
-      notifyButton: {
-        enable: true,
-      },
-    });
-  });
-</script>
+
+
+<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BIysJ_qvKkxL-W5yrci22Xit-IzvJRNeWOOhfrwTuEHr_natVs01AftojWvVF7JqLZIdoqK0QXWNHwsajkW6Rok' });</script><!-- end webpushr code --> 
+
     </body>
     </html>
 
