--- a/index.html
+++ b/index.html
@@ -1517,9 +1517,17 @@ I have selected to national level science exhibition.
             });
             </script>
 
-
-<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BIysJ_qvKkxL-W5yrci22Xit-IzvJRNeWOOhfrwTuEHr_natVs01AftojWvVF7JqLZIdoqK0QXWNHwsajkW6Rok' });</script><!-- end webpushr code --> 
-
+
+<!-- PushAlert -->
+<script type="text/javascript">
+        (function(d, t) {
+                var g = d.createElement(t),
+                s = d.getElementsByTagName(t)[0];
+                g.src = "https://cdn.pushalert.co/integrate_d29519975e8575ae60ec8d82324efe3b.js";
+                s.parentNode.insertBefore(g, s);
+        }(document, "script"));
+</script>
+<!-- End PushAlert -->
     </body>
     </html>
 
