--- a/index.html
+++ b/index.html
@@ -1316,7 +1316,9 @@ body {
                     <a href="https://wa.me/message/UHRI2N3M7DOYN1"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://github.com/Samartha0007"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="" style="--i:11" class="btn-box" target="_blank">Share</a>
+                <a href="https://drive.google.com/file/d/1FG0aHM8jqHsApXpUnQq-BhMHpAAIw6rV/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download my app !</a>
+                           <a href="https://drive.google.com/file/d/13GWLOvK7LqlaRXGcUXGVlI_C7FYQnEX2/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download my game !</a>
+
             </div>
         </section>
 
@@ -1340,12 +1342,8 @@ I have selected to national level science exhibition.
                 </div>
             </div>
         </section>
-
         
-
-
-
-        <section id="Projects">
+       <section id="Projects">
             <div id="portfolio" class="services">
                 <div class="main-text" id="serv">
                     <h2>My Top 10 <span>Projects</span></h2>
@@ -1517,7 +1515,8 @@ I have selected to national level science exhibition.
             });
             </script>
 
-
+
+
  
     </body>
     </html>
