--- a/index.html
+++ b/index.html
@@ -1316,8 +1316,14 @@ body {
                     <a href="https://wa.me/message/UHRI2N3M7DOYN1"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://github.com/Samartha0007"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1FG0aHM8jqHsApXpUnQq-BhMHpAAIw6rV/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download my app !</a>
-                           <a href="https://drive.google.com/file/d/13GWLOvK7LqlaRXGcUXGVlI_C7FYQnEX2/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">Download my game !</a>
+              
+                           <a href="https://drive.google.com/file/d/13GWLOvK7LqlaRXGcUXGVlI_C7FYQnEX2/view?usp=sharing" style="--i:11" class="btn-box" target="_blank">download my game instantly!
+
+
+
+
+
+</a>
 
             </div>
         </section>
