--- a/index.html
+++ b/index.html
@@ -1336,12 +1336,7 @@ body {
                 </div>
                 <div class="about-text">
                     <h2>About <span>Me</span></h2>
-                    <p>I'm a Smart working  student specialized in Electronics and  IOT.
-I am good at solving cubes and other activites . 
-I selected to state level science exhibition.
-                        It was during this project that I discovered that I am a IOT developing student.
-                        I am currently learning python.
-                        Thank you !<br>
+                    <p> Hello! I'm a student focusing on Electronics and IoT, skilled in cube-solving and various activities. The state-level science exhibition sparked my interest in IoT development. I'm looking forward to the educational journey. Thanks for taking a glimpse into my academic pursuits!<br>
                         <br>
                       
                     </p>
