--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@ body {
                         </div>
 
                         <div class="row">
-                            <img src="https://i.ibb.co/8PqnqVd/In-Shot-20240117-192551227.jpg">
+                            <img src="https://i.ibb.co/VVB3Nhq/images-1.jpg">
                             <div class="layer">
                                 <h5>Smart Automation</h5>
                                 <p>We can control any electric devices from my app through voice - timer - chatbot - buttons  </p>
@@ -1373,7 +1373,7 @@ body {
                         </div>
 
                         <div class="row">
-                            <img src="https://i.ibb.co/DDCt2Cy/In-Shot-20240117-192629365.jpg">
+                            <img src="https://i.ibb.co/Z6t2TFv/download-2.png">
                             <div class="layer">
                                 <h5>Whatsapp Automation</h5>
                                 <p>If we send message turn on devices then it will automatically activate the devices</p>
@@ -1383,7 +1383,7 @@ body {
                         </div>
             </div>
                                     <div class="row">
-                            <img src="https://i.ibb.co/7CX7gtZ/In-Shot-20240117-192804255.jpg">
+                            <img src="https://i.ibb.co/Dt9241g/images.png">
                             <div class="layer">
                                 <h5>Line-Following Car</h5>
                                 <p>My car track and follow designated lines on the road, showcasing the seamless integration of advanced technology </p>
@@ -1427,7 +1427,7 @@ body {
                             
                         </div>
                         <div class="row">
-                            <img src="https://i.ibb.co/VM67ZJd/In-Shot-20240117-193025946.jpg">
+                            <img src="https://i.ibb.co/4db7J6p/images.jpg">
                             <div class="layer">
                                 <h5>Telegram Chatbot</h5>
                                 <p>AI responses on telegram bot using python</p>
@@ -1438,7 +1438,7 @@ body {
                             
                         </div>
                         <div class="row">
-                            <img src="https://i.ibb.co/Xssn5sd/In-Shot-20240117-193117967.jpg">
+                            <img src="https://i.ibb.co/W5ZRjNR/download-1.png">
                             <div class="layer">
                                 <h5>Web Notification</h5>
                                 <p>Sending a push notification to users daily </p>
