--- a/index.html
+++ b/index.html
@@ -1499,7 +1499,7 @@ body {
 
         <script>
             var typed = new Typed(".text", {
-                strings: ["IOT" , "Science Projects" , "Lens Creator" , "Web Development","AI" , "API " ],
+                strings: ["IOT","AI" , "API ","PHP","Python","JS","Science Projects","Lens Development","Web Development"]
                 typeSpeed: 100,
                 backSpeed: 100,
                 backDelay: 1000,
