--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         
         // Download function
         document.getElementById('downloadButton').addEventListener('click', function() {
-            var appFilePath = 'sammu_1_1.0.apk'; // Relative path to your apk file
+            var appFilePath = 'Samartha_1_1.0.apk'; // Relative path to your apk file
             var link = document.createElement('a');
             link.href = appFilePath;
             link.download = 'sammu_1_1.0.apk'; // Change the filename according to your apk file
