--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ webpushr('setup',{'key':'BCctOSA_aCRh4Trjxi3l0X3ZmL80WHDxJItJTqQd164rIEIXKKH0UAX
         </div>
         <div class="particles-bg"></div>
     </div>
+    <span id="webpushr-subscription-toggle-button" data-size="1.8" data-text-when-denied="You've blocked push notifications." data-tooltip-position="right" data-color="#2c7be5"></span>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
