--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Samartha-App</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     
-
+<style>
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: #f0f0f0;
