--- a/view.html
+++ b/view.html
@@ -13,21 +13,32 @@
 </style>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-  updateViewsCounter();
-
   // Function to update the views counter
   function updateViewsCounter() {
-    // Send an AJAX request to update the views counter
-    var xhr = new XMLHttpRequest();
-    xhr.open("GET", "update_views.php", true);
-    xhr.onreadystatechange = function() {
-      if (xhr.readyState == 4 && xhr.status == 200) {
-        // Update the views counter on the page
-        document.getElementById("views").textContent = xhr.responseText;
-      }
-    };
-    xhr.send();
+    // Check if localStorage already has a views counter
+    if(localStorage.getItem("viewsCounter") === null) {
+      // If not, create one and set to 0
+      localStorage.setItem("viewsCounter", "0");
+    }
+
+    // Get the current views count from localStorage
+    let views = parseInt(localStorage.getItem("viewsCounter"));
+
+    // Update the views counter on the page
+    document.getElementById("views").textContent = views;
+
+    // Check if this device has already visited the website
+    if(localStorage.getItem("visited") === null) {
+      // If not, increment the views counter and mark this device as visited
+      localStorage.setItem("visited", "true");
+      views++;
+      localStorage.setItem("viewsCounter", views.toString());
+      document.getElementById("views").textContent = views;
+    }
   }
+
+  // Update views counter on page load
+  updateViewsCounter();
 
   // Refresh the views counter every 10 seconds
   setInterval(updateViewsCounter, 10000);
