--- a/view.html
+++ b/view.html
@@ -1,70 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Website Views Counter</title>
-<style>
-.counter {
-  font-size: 24px;
-  text-align: center;
-  margin-top: 50px;
-}
-</style>
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  // Function to generate a unique browser fingerprint
-  function generateFingerprint() {
-    let fingerprint = "";
-    try {
-      fingerprint = new Fingerprint().get();
-    } catch (e) {
-      // Handle errors if Fingerprint.js library is not loaded
-    }
-    return fingerprint;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multiplayer Tic Tac Toe</title>
+    <style>
+        /* CSS styles for the game interface */
+        .board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-template-rows: repeat(3, 100px);
+            gap: 5px;
+        }
 
-  // Function to update the views counter
-  function updateViewsCounter() {
-    // Check if sessionStorage already has a views counter
-    if(sessionStorage.getItem("viewed") === null) {
-      // If not, create one and set to 0
-      sessionStorage.setItem("viewed", "true");
-
-      // Check if localStorage already has a unique fingerprint
-      let fingerprint = localStorage.getItem("fingerprint");
-      if (!fingerprint) {
-        // If not, generate a new fingerprint and store it in localStorage
-        fingerprint = generateFingerprint();
-        localStorage.setItem("fingerprint", fingerprint);
-      }
-
-      // Check if localStorage already has a views counter
-      if(localStorage.getItem("viewsCounter") === null) {
-        // If not, create one and set to 0
-        localStorage.setItem("viewsCounter", "0");
-      }
-
-      // Increment the views counter and update localStorage
-      let views = parseInt(localStorage.getItem("viewsCounter"));
-      views++;
-      localStorage.setItem("viewsCounter", views.toString());
-    }
-
-    // Get the current views count from localStorage
-    let views = parseInt(localStorage.getItem("viewsCounter"));
-
-    // Update the views counter on the page
-    document.getElementById("views").textContent = views;
-  }
-
-  // Update views counter on page load
-  updateViewsCounter();
-});
-</script>
+        .cell {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2em;
+            border: 1px solid #ccc;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<div class="counter">Views: <span id="views">0</span></div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fingerprintjs2/2.1.0/fingerprint2.min.js"></script>
+    <!-- HTML structure for the game interface -->
+    <div class="board" id="board">
+        <!-- Tic Tac Toe board -->
+    </div>
+
+    <div>
+        <!-- Shareable link -->
+        <p>Share this link with your friend:</p>
+        <input type="text" id="shareLink" readonly>
+    </div>
+
+    <script src="https://cdn.socket.io/4.3.1/socket.io.min.js"></script>
+    <script>
+        // JavaScript code for the game logic and communication with the server
+        const socket = io();
+        let currentPlayer = 'X';
+        let gameId = null;
+
+        // Generate a unique game ID
+        function generateGameId() {
+            return Math.random().toString(36).substr(2, 9);
+        }
+
+        // Check if there are URL parameters to join an existing game
+        const urlParams = new URLSearchParams(window.location.search);
+        gameId = urlParams.get('gameId');
+        if (gameId) {
+            socket.emit('joinGame', gameId);
+            document.getElementById('shareLink').value = window.location.href;
+        } else {
+            gameId = generateGameId();
+            history.pushState(null, null, `?gameId=${gameId}`);
+            document.getElementById('shareLink').value = window.location.href;
+        }
+
+        const board = document.getElementById('board');
+
+        // Create the Tic Tac Toe board
+        for (let i = 0; i < 9; i++) {
+            const cell = document.createElement('div');
+            cell.classList.add('cell');
+            cell.dataset.index = i;
+            cell.addEventListener('click', () => {
+                if (cell.textContent === '' && currentPlayer === 'X') {
+                    cell.textContent = currentPlayer;
+                    socket.emit('move', { index: i, player: currentPlayer, gameId });
+                    currentPlayer = 'O';
+                }
+            });
+            board.appendChild(cell);
+        }
+
+        // Handle incoming moves from the server
+        socket.on('move', (data) => {
+            const cell = document.querySelector(`[data-index="${data.index}"]`);
+            if (cell.textContent === '') {
+                cell.textContent = data.player;
+                currentPlayer = data.player === 'X' ? 'O' : 'X';
+            }
+        });
+    </script>
 </body>
 </html>
