--- a/index.html
+++ b/index.html
@@ -1314,8 +1314,7 @@ body {
                     <a href="https://wa.me/message/UHRI2N3M7DOYN1"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://github.com/Samartha0007"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
                 </div>
-<a href="app.html" class="btn-box" style="--i:11" target="_blank">Get the App!</a>
-
+           <a href="app.html" class="btn-box" style="--i:11">Get the App!</a>
             </div>
         </section>
 
