--- a/index.html
+++ b/index.html
@@ -1309,10 +1309,10 @@ body {
 
 
                 <div class="home-sci">
-                    <a href="https://twitter.com/samarth600" target="_blank"><i class="bx bxl-twitter"></i></a>
+                    <a href="https://twitter.com/samarth600"style="--i:7" target="_blank"><i class='bx bxl-twitter' ></i></a>
                     <a href="mailto:samarthags121@gmail.com"style="--i:8" target="_blank"><i class='bx bxl-gmail' ></i></a>
                     <a href="https://wa.me/message/UHRI2N3M7DOYN1"style="--i:9" target="_blank"><i class='bx bxl-whatsapp'></i></a>
-                    <a href="https://github.com/Samartha0007"style="--i:10" target="_blank"><i class='bx bxl-github'></i></a>
+                    <a href="https://t.me/Samartha_gs"style="--i:10" target="_blank"><i class='bx bxl-telegram'></i></a>
                 </div>
            <a href="app.html" class="btn-box" style="--i:11">Get the App!</a>
             </div>
@@ -1482,12 +1482,11 @@ I have selected to national level science exhibition.
 
                 </div>
                 <div class="contact-icons">
-                    <a href="https://github.com/Samartha0007" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href="https://wa.me/message/UHRI2N3M7DOYN1"><i class='bx bxl-whatsapp'></i></a>
                     <a href="https://twitter.com/samarth600" target="_blank"><i class="bx bxl-twitter"></i></a>
                     <a href="mailto:samarthags121@gmail.com" target="_blank"><i class="bx bxl-gmail"></i></a>
-                                        <a href="https://t.me/Samartha_gs" target="_blank"><i class="bx bxl-telegram"></i></a>
-                                     <a href="https://www.snapchat.com/add/samartha_gs" target="_blank"><i class="bx bxl-snapchat"></i></a>
+                    <a href="https://t.me/Samartha_gs" target="_blank"><i class="bx bxl-telegram"></i></a>
+
                     
                 </div>
             </div>
