--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,7 @@ body {
                     <h2>About <span>Me</span></h2>
                     <p>I'm a Smart working  student specialized in Electronics and  IOT.
 I am good at solving cubes and other activites . 
-I have selected to national level science exhibition.
+I have selected to state level science exhibition.
                         It was during this project that I discovered that I am a IOT developing student.
                         I am currently learning python.
                         Thank you !<br>
