--- a/index.html
+++ b/index.html
@@ -9,6 +9,58 @@
         <link rel="stylesheet" href='C:\Users\91799\Desktop\New folder\style.css'>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+        <!-- Organization Schema Markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Samartha Gs",
+  "url": "https://samarthags.cloud",
+  "logo": "https://samarthags.cloud/photo_2024-01-12_10-17-22.jpg",
+"contactPoint": {
+  "@type": "ContactPoint",
+  "telephone": "+919945751404",
+  "contactType": "Customer Service",
+  "contactOption": "Mobile",
+  "areaServed": "India"
+}
+  "sameAs": [
+    "https://wa.me/message/UHRI2N3M7DOYN1",
+    "https://twitter.com/samarth600",
+    "https://t.me/Samartha_gs"
+  ]
+}
+</script>
+
+<!-- Article Schema Markup -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://samarthags.cloud"
+  },
+  "headline": "Samartha GS",
+  "description": "I'm a Smart working student specialized in AI and IoT. I am good at solving cubes and other activites . I have selected to state level science exhibition. It was during this project that I discovered that I am a IOT developing student. I am currently learning python. Thank you !
+",
+  "image": "https://samarthags.cloud/photo_2024-03-11_21-40-43.jpg",
+  "author": {
+    "@type": "Person",
+    "name": "Samartha Gs"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Samartha Gs",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://samarthags.cloud/photo_2024-01-12_10-17-22.jpg"
+    }
+  },
+  "datePublished": "2024-03-12",
+  "dateModified": "2024-03-12"
+}
+</script>
 
         
     </head>
