--- a/bot.html
+++ b/bot.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Push Notification Permission</title>
+
+<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BCxGMLASy6a4l7Qax8yrmkJVA95kcTWk2UMFLe9LUiRqsMcAQC5HuGsFZWJRjY1nr37CTDfR6MYyUIR6G5vxhZA' });</script><!-- end webpushr code -->
 <style>
     body {
         font-family: Arial, sans-serif;
