--- a/index.html
+++ b/index.html
@@ -1347,6 +1347,7 @@ body {
         </header>
 
 
+<span id="webpushr-subscription-toggle-button" data-size="1.8" data-text-when-denied="You've blocked push notifications." data-tooltip-position="top" data-color="#000000"></span>
         <section class="home" id="Home">
             <div class="home-content">
                 
