--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,9 @@ body {
             </nav>
         </header>
 
-          
+                  <section class="home" id="Home">
+            <div class="home-content">
+
                 <h3>Hello, It's Me</h3>
                 <h1>Samartha Gs </h1>
                 <h4 style="--i:6">I'm a student who is<br>
