--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@ I have selected to state level science exhibition.
                     <h2>My Top 10 <span>Projects</span></h2>
                     <div class="serv-container">
                         <div class="row">
-                            <img src="https://i.ibb.co/y80dfbf/photo-2024-01-12-10-17-22.jpg">
+                            <img src="https://i.ibb.co/jLjdmJN/In-Shot-20240314-112610955.jpg">
                             <div class="layer">
                                 <h5>Smart Security</h5>
                                 <p>If motion detected below range of 50cm an message will sent to the users and request a live call </p>
@@ -1411,7 +1411,7 @@ I have selected to state level science exhibition.
                         </div>
 
                         <div class="row">
-                            <img src="https://i.ibb.co/y80dfbf/photo-2024-01-12-10-17-22.jpg">
+                            <img src="https://i.ibb.co/jLjdmJN/In-Shot-20240314-112610955.jpg">
                             <div class="layer">
                                 <h5>Smart Automation</h5>
                                 <p>We can control any electric devices from my app through voice - timer - chatbot - buttons  </p>
@@ -1502,7 +1502,7 @@ I have selected to state level science exhibition.
                             <img src="https://i.ibb.co/b6gY6WL/In-Shot-20240117-193142973.jpg">
                             <div class="layer">
                                 <h5>Image Sharing platform</h5>
-                                <p>We can upload and view images using PHP</p>
+                                <p>We can upload and view images using my web</p>
 
                                 <a href="#"><i class='bx bxs-image' style="color: aliceblue;"></i></a>
                                 
