--- a/index.html
+++ b/index.html
@@ -1334,7 +1334,9 @@ body {
 
 </style>
 
-        
+
+
+<link rel="shortcut icon" type="image/x-icon" href="/photo_2024-01-12_10-17-22.jpg">        
         <header class="header">
             
             <a href="#" class="logo">Samartha</a>
