--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Samartha Gs</title>
+        <link rel="icon" href="" type="image/x-icon">
         <link rel="shortcut icon" type="image/png" href="ic.png">
         <link rel="stylesheet" href='C:\Users\91799\Desktop\New folder\style.css'>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -1335,6 +1336,12 @@ body {
         color: #000;
     }
 }
+          .logo img {
+    width: 150px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    /* Add more styling properties as necessary */
+}
+
 
 </style>
 
@@ -1342,6 +1349,13 @@ body {
 
 <link rel="shortcut icon" type="image/x-icon" href="/photo_2024-01-12_10-17-22.jpg">        
         <header class="header">
+            <header class="header">
+    <a href="#" class="logo">
+        <img src="path/to/your/logo.png" alt="Samartha">
+    </a>
+    <!-- Your navigation menu goes here -->
+</header>
+
             
             <a href="#" class="logo">Samartha</a>
             <nav class="navbar" id="myLinks">
